force-app/main/default/objects/Terms_Conditions__c/Terms_Conditions__c.object-meta.xml
<CustomObject>
    <label>Terms &amp; Conditions</label>
    <nameField>
        <displayFormat>TC-{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms &amp; Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>